--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -10,11 +10,10 @@
             content="Web site created using create-react-app"
         />
 
-        <link rel="stylesheet" href="
-        <script
-            src="https://kit.fontawesome.com/9cfccc003f.js"
-            crossorigin="anonymous"
-        ></script>
+        <link
+            rel="stylesheet"
+            href="https://use.fontawesome.com/releases/v6.1.1/css/all.css"
+        />
 
         <title>Groupomania</title>
     </head>
